# miMayaPlugins

./: .gitignore  CMakeLists_template.txt  LICENSE.md  README.md
PySideWindow/: README.md  sampleWindow.py  sampleWindow2018.py
UvChecker/src/: uvChecker.cpp  uvChecker.h  uvPoint.cpp  uvPoint.h
circulateVertices/: README.md  circulateVertices.py  circulateVerticesGui.py
duplicateOnSurface/: README.md  duplicateOnSurface.py  duplicateOverSurface.py
duplicateOverSurface/: README.md  duplicateOverSurface.py
findUvOverlaps/: CMakeLists.txt
findUvOverlaps/src/: findUvOverlaps.cpp  findUvOverlaps.h  pluginMain.cpp  uvShell.cpp
meshChecker/: CMakeLists.txt  README.md
meshChecker/src/: meshChecker.cpp  meshChecker.h  pluginMain.cpp  topologyChecker.cpp
pluginTemplatePyCmd/: pyPluginCmd.py
plugin_templates/cpp_command/src/: pluginMain.cpp  sampleCommand.cpp  sampleCommand.h
plugin_templates/python_command/: pyPluginCmd.py
randomPointOnMesh/: CMakeLists.txt  README.md
randomPointOnMesh/plug-ins/win64_2017/: randomPointOnMesh.mll
randomPointOnMesh/src/: pluginMain.cpp  randomPointOnMesh.cpp  randomPointOnMesh.h
retrieveTransform/: README.md  retrieveTransform.py
retriveTransform/: retriveTransform.py
snapToClosest/: CMakeLists.txt  README.md
snapToClosest/plug-ins/mac_maya2015/: snapToClosest.bundle
snapToClosest/plug-ins/win64_maya2015/: snapToClosest.mll
snapToClosest/plug-ins/win64_maya2017/: snapToClosest.mll
snapToClosest/python/: ui.py
snapToClosest/src/: pluginMain.cpp  snapToClosest.cpp  snapToClosest.h
symmetryTable/: CMakeLists.txt  README.md  symCluster.py  utils.py
symmetryTable/src/: pluginMain.cpp  symmetryTable.cpp  symmetryTable.h
topologyChecker/: CMakeLists.txt  README.md
topologyChecker/src/: pluginMain.cpp  topologyChecker.cpp  topologyChecker.h  uvUtils.h
topologyChecker/topologyChecker/: .gitignore  LICENSE  README.md
topologyChecker/topologyChecker/src/: topologyChecker.cpp  uvUtils.cpp
transferUV/: CMakeLists.txt  README.md
transferUV/py/: transferUV.py
transferUV/src/: pluginMain.cpp  transferUV.cpp  transferUV.h
transferVertex/: CMakeLists.txt
transferVertex/src/: pluginMain.cpp  transferVertex.cpp  transferVertex.h
uvChecker/: CMakeLists.txt  README.md
uvChecker/py/: uvOverlap.py
uvChecker/src/: event.cpp  event.h  findUvOverlaps.cpp  findUvOverlaps.h  findUvOverlaps2.cpp  findUvOverlaps2.h  findUvOverlaps_old.cpp  pluginMain.cpp  testCase.cpp  testCase.h  uvChecker.cpp  uvChecker.h  uvEdge.cpp  uvEdge.h  uvPoint.cpp  uvPoint.h  uvShell.h  vector.cpp  vector.h
